[fix] 修复生成map类型的java resolve代码的有编译错误的问题 [fix] 修复生成 java array类型代码的编译bug