@@ -8,7 +8,7 @@ import java.nio.file.Paths;
 public class Main {
     public static void main(String[] args) throws IOException {
         cfg.Tables tables = new cfg.Tables(file -> JsonParser.parseString(
-                Files.readString(Paths.get("../GenerateDatas/json", file + ".json"))));
+                new String(Files.readAllBytes(Paths.get("../GenerateDatas/json", file + ".json")), "UTF-8")));
         System.out.println("== run == " + tables.getTbGlobalConfig().getBagCapacity());
     }
 }
